--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
         <spring-cloud.version>2023.0.0</spring-cloud.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/fromanoel/app-matematica-dtos</url>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
